<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Biometrics Opt In Screen -->
    <string name="app_enableBiometricsTitle">Use biometrics with this app</string>
    <string name="app_enableBiometricsButton">Use biometrics</string>
    <string name="app_enablePasscodeOrPatternButton">Skip</string>
    <string name="app_enableBiometricsBody2">If you use biometrics with this app, it could be accessed by anyone who can unlock your phone with their biometrics or with your phone\'s pin or pattern.</string>
    <string name="app_enableBiometricsBody3">You can turn off biometrics anytime in the app settings.</string>
    <string name="app_enableBiometricsImageTestTag" translatable="false">Decorative image test tag</string>
    <!-- Wallet Copy -->
    <string name="app_wallet_enableBiometricsBody1">Use your face, fingerprint or iris to:</string>
    <string name="app_wallet_enableBiometricsBullet1">sign in</string>
    <string name="app_wallet_enableBiometricsBullet2">view and add documents</string>
    <!-- No Wallet Copy -->
    <string name="app_enableBiometricsBody1">You can unlock the app with your face, fingerprint or iris within 30 minutes of signing in with GOV.UK One Login.</string>

    <!-- Go To Settings Screen -->
    <string name="app_localAuthManagerErrorTitle">You need to update your phone settings</string>
    <string name="app_localAuthManagerErrorBody1">To add documents, you need to protect your phone with a pin or a pattern.</string>
    <string name="app_localAuthManagerErrorBody2">This is to make sure no one else can view or add documents to your app.</string>
    <string name="app_localAuthManagerErrorBody3">You need to go to your phone settings and:</string>
    <string name="app_localAuthManagerErrorNumberedList1">Find the option to set up a pin or pattern to unlock your phone - this is usually in <b>Device unlock</b> or <b>Lock screen</b>.</string>
    <string name="app_localAuthManagerErrorNumberedList2">Follow the instructions.</string>
    <string name="app_localAuthManagerErrorNumberedList3">Come back to continue using your documents.</string>
    <string name="app_localAuthManagerErrorGoToSettingsButton">Go to phone settings</string>
    <string name="app_localAuthManagerErrorReason" translatable="false">update phone settings error</string>

    <!-- Analytics default values -->
    <string name="system_backButton" translatable="false">back - system</string>
    <string name="icon_backButton" translatable="false">Back</string>

    <!-- Biometrics skipped screen -->
    <string name="app_optOutBiometricsTitle">You need to use biometrics</string>
    <string name="app_optOutBiometricsBody1">To add documents, you need to allow this app to use your face, fingerprint or iris. This is to keep your documents secure.</string>
    <string name="app_optOutBiometricsBody2">When you use biometrics, anyone who can unlock your phone with their biometrics or with your phone\'s pin or pattern might be able to access your app.</string>
    <string name="app_optOutBiometricsBody3">@string/app_enableBiometricsBody3</string>
    <string name="app_optOutBiometricsButton">@string/app_enableBiometricsButton</string>
    <string name="app_optOutBiometricsErrorReason" translatable="false">biometrics skipped error</string>
</resources>
